[package]
name = "avr-async"
version = "0.1.0"
authors = ["shurizzle <me@shurizzle.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "avr-async"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "1.0.0"
embedded-hal = "0.2.3"
vcell = "0.1.3"
pin-utils = "0.1.0"
avr-device = "0.3.4"
num-traits = { version = "0.2.15", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-leonardo"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"
