[package]
name = "avr-async-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }

[features]
at90usb1286 = []
atmega1280 = []
atmega1284p = []
atmega128rfa1 = []
atmega164pa = []
atmega168 = []
atmega2560 = []
atmega8 = []
atmega8u2 = []
atmega328p = []
atmega328pb = []
atmega32u4 = []
atmega4809 = []
atmega48p = []
atmega64 = []
atmega644 = []
attiny13a = []
attiny202 = []
attiny2313 = []
attiny2313a = []
attiny84 = []
attiny85 = []
attiny88 = []
attiny816 = []
attiny841 = []
attiny861 = []
attiny167 = []
attiny1614 = []
