[package]
name = "avr-async"
version = "0.1.0"
authors = ["shurizzle <me@shurizzle.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pin-utils = "0.1.0"
num-traits = { version = "0.2.15", default-features = false }
heapless = { version = "0.7.15", default-features = false }
either = { version = "1.7.0", default-features = false }
avr-device = "0.3.4"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-leonardo"]

[dependencies.avr-async-macros]
path = "../avr-async-macros"

[features]
default = []
time = []
alloc = []

at90usb1286 = []
atmega1280 = []
atmega1284p = []
atmega128rfa1 = []
atmega164pa = []
atmega168 = []
atmega2560 = []
atmega8 = []
atmega8u2 = []
atmega328p = []
atmega328pb = []
atmega32u4 = []
atmega4809 = []
atmega48p = []
atmega64 = []
atmega644 = []
attiny13a = []
attiny202 = []
attiny2313 = []
attiny2313a = []
attiny84 = []
attiny85 = []
attiny88 = []
attiny816 = []
attiny841 = []
attiny861 = []
attiny167 = []
attiny1614 = []
