[package]
name = "bpm120"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpm120"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
avr-device = "0.3.4"
heapless = { version = "0.7.16", default-features = false }

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"

[dependencies.avr-async]
path = "../avr-async"

[features]
default = []
atmega328p = ["avr-async/atmega328p", "arduino-hal/arduino-uno"]
atmega32u4 = ["avr-async/atmega32u4", "arduino-hal/arduino-leonardo"]
