[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpm120"
path = "src/bpm120.rs"
test = false
bench = false

[[bin]]
name = "i2c"
path = "src/i2c.rs"
test = false
bench = false

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
avr-device = "0.3.4"
heapless = { version = "0.7.16", default-features = false }

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"

[dependencies.avr-async]
path = "../avr-async"
features = ["twi"]

[features]
default = []
atmega328p = ["avr-async/atmega328p", "arduino-hal/arduino-uno"]
#atmega32u4 = ["avr-async/atmega32u4", "arduino-hal/arduino-leonardo"]
